--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>vuejsprojet</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/Logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/WorkoutApp.png">
   </head>
   <body>
     <div id="app"></div>
